# kinect

./: CMakeLists.txt  test.cc  test2.cpp  testcode.cpp
